crates/cli/src/tui/views/snapshots/wasm__tui__views__snapshot_tests__interfaces_view_snapshot.snap
---
source: crates/cli/src/tui/views/snapshot_tests.rs
expression: output
---
              Interfaces will be shown here...
