crates/cli/src/tui/views/snapshots/wasm__tui__views__snapshot_tests__local_view_snapshot.snap
---
source: crates/cli/src/tui/views/snapshot_tests.rs
expression: output
---
            ▖  ▖       ▐▘▗ ▜
            ▌▞▖▌▀▌▛▘▛▛▌▐ ▜ ▐
            ▛ ▝▌█▌▄▌▌▌▌▐ ▟▖▐
                       ▝▘  ▀
