crates/cli/src/tui/views/snapshots/wasm__tui__views__snapshot_tests__packages_view_empty_snapshot.snap
---
source: crates/cli/src/tui/views/snapshot_tests.rs
expression: output
---
┌ Filter ──────────────────────────────────────────────────────────────────────┐
│Press / to filter...                                                          │
└──────────────────────────────────────────────────────────────────────────────┘
                               No packages stored.
 /  Filter   p  Pull   d  Delete   Enter  View details   Esc  Clear
