crates/cli/src/tui/views/snapshots/wasm__tui__views__snapshot_tests__packages_view_with_filter_active_snapshot.snap
---
source: crates/cli/src/tui/views/snapshot_tests.rs
expression: output
---
┌ Filter ──────────────────────────────────────────────────────────────────────────────────────────┐
│hello_                                                                                            │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
Repository                 Registry             Tag             Size         Digest
example/hello-world        ghcr.io              v1.0.0          10.00 MB     abc123def456
 /  Filter   p  Pull   d  Delete   Enter  View details   Esc  Clear
