crates/cli/src/tui/views/snapshots/wasm__tui__views__snapshot_tests__packages_view_with_packages_snapshot.snap
---
source: crates/cli/src/tui/views/snapshot_tests.rs
expression: output
---
┌ Filter ──────────────────────────────────────────────────────────────────────────────────────────┐
│Press / to filter...                                                                              │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
Repository                 Registry             Tag             Size         Digest
example/hello-world        ghcr.io              v1.0.0          10.00 MB     abc123def456
library/nginx              docker.io            latest          50.00 MB     xyz789








 /  Filter   p  Pull   d  Delete   Enter  View details   Esc  Clear
