crates/cli/src/tui/views/snapshots/wasm__tui__views__snapshot_tests__search_view_with_packages_snapshot.snap
---
source: crates/cli/src/tui/views/snapshot_tests.rs
expression: output
---
┌ Search ──────────────────────────────────────────────────────────────────────────────────────────┐
│Press / to search...                                                                              │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
Repository                       Registry                  Tags                 Last Seen
example/hello-world              ghcr.io                   v1.0.0, v1.1.0, late 2024-01-15
library/nginx                    docker.io                 1.24, 1.25, +3       2024-01-14
 /  Search   p  Pull selected   r  Refresh tags   Esc  Clear
