crates/cli/src/tui/views/snapshots/wasm__tui__views__snapshot_tests__settings_view_loading_snapshot.snap
---
source: crates/cli/src/tui/views/snapshot_tests.rs
expression: output
---
Loading state information...
