crates/cli/src/tui/views/snapshots/wasm__tui__views__snapshot_tests__settings_view_with_state_info_snapshot.snap
---
source: crates/cli/src/tui/views/snapshot_tests.rs
expression: output
---
Migrations
  Current:  3/3
Storage
Executable       /usr/local/bin/wasm                        -
Data storage     /home/user/.local/share/wasm               -
Image layers     /home/user/.local/share/wasm/layers        50.00 MB
Image metadata   /home/user/.local/share/wasm/metadata.db   100.00 KB
